logged out frontpage for Pit, misc other shit

--- a/intranet/index.htm
+++ b/intranet/index.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Pit Prototype</title>
+		<title>CMU Design Intranet</title>
 		<link href="../assets/css/reset.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/960.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/style.css" rel="stylesheet" type="text/css">
@@ -27,8 +27,8 @@
 						<nav id="global">
 							<ul>
 								<li>
-									<a href="classes.htm">
-										<span>My classes</span>
+									<a href="projects.htm">
+										<span>My projects</span>
 									</a>
 								</li>
 								<li>
@@ -50,7 +50,7 @@
 											<a href="#">My Account</a>
 										</li>
 										<li>
-											<a href="#">Logout</a>
+											<a href="index2.htm">Logout</a>
 										</li>
 									</ul>
 								</li>
