--- a/intranet/project.htm
+++ b/intranet/project.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Pit Prototype</title>
+		<title>CMU Design Intranet</title>
 		<link href="../assets/css/reset.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/960.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/style.css" rel="stylesheet" type="text/css">
@@ -27,8 +27,8 @@
 						<nav id="global">
 							<ul>
 								<li>
-									<a href="classes.htm">
-										<span>My classes</span>
+									<a href="projects.htm">
+										<span>My projects</span>
 									</a>
 								</li>
 								<li>
@@ -50,7 +50,7 @@
 											<a href="#">My Account</a>
 										</li>
 										<li>
-											<a href="#">Logout</a>
+											<a href="index2.htm">Logout</a>
 										</li>
 									</ul>
 								</li>
@@ -73,7 +73,7 @@ Editing "Inclusive design" project for Product Design III class.<br>
 					<div class="grid_7 alpha suffix_1">
 						<form>
 						<input type="text" value="Nobi Radio"></input>
-						<img src="../assets/img/wysiwig.jpg">
+						<a href="#"><img src="../assets/img/wysiwig.jpg"></a>
 						<div id="textarea">
 						In a sponsored project with Carnegie Mellon Design, General Motors asked us to research and design future interaction scenarios with semi-autonomous vehicles. I worked with Renee Yang to do a brief research phase, develop preliminary ideas, and refine a final concept.<br><br>
 
