--- a/intranet/prints.htm
+++ b/intranet/prints.htm
@@ -73,7 +73,7 @@
 			
 			<div class="container_12">
 				<section id="myprints" class="grid_12">
-					<div id="title">Submit new print</div>
+					<div id="title">Select a printer to submit a new print</div>
 					<a href="#" class="printer" title="Inkjet printer for photographs and final designs."><img src="../assets/img/printers1.jpg"></a><a href="#" class="printer" title="Fast, cheap laser prints for mockups and fliers."><img src="../assets/img/printers2.jpg"></a><a href="#" class="printer" title="Large format printer for posters."><img src="../assets/img/printers3.jpg"></a><a href="#" class="printer" title="Laser cutter for cutting or etching non toxic materials."><img src="../assets/img/printers4.jpg"></a><a href="#" class="printer" title="3D Printer for digital fabrication of physical prototypes."><img src="../assets/img/printers5.jpg"></a><br><br><br>
 					<br><br><div id="labels">
 						<span class="timestamp">
