some rearchitecting intranet shit, fixes

--- a/intranet/index2.htm
+++ b/intranet/index2.htm
@@ -24,11 +24,13 @@
 			<div class="center"><img src="../assets/img/intranet_logo_large.png"></div>
 			
 			<form>
-			<input type="text" placeholder="Username"></input> 
-			<input type="password" placeholder="Password"></input> 
-			<a href="index.htm" class="button">Sign in</a>
+				<input type="text" placeholder="Username"></input> 
+				<input type="password" placeholder="Password"></input> 
+				<a href="index.htm" class="button">Sign in</a>
 			</form>
-			<br class="clear"><br>
+			<br class="clear">
+			<br>
+			
 			<div id="cycler">
 				<div>Manage your projects and public profile on the School's website.</div>
 				<div>Submit color prints to the School's computer cluster.</div>
