--- a/intranet/profile.htm
+++ b/intranet/profile.htm
@@ -64,10 +64,10 @@
 			<div class="container_12">
 				<section id="profile" class="grid_7 suffix_5">
 					<img src="../assets/img/content/davidyen.jpg">
-					<div id="title">David Yen</div>
+					<h2 class="intranet">David Yen</h2>
 					
-					<h4>Industrial design undergraduate</h4>
-					<h2 class="intranet">Edit public profile</h2>
+					<h5 class="intranet">Industrial design undergraduate</h5><br class="clear"><br>
+					<h3 class="intranet">Edit public profile</h3>
 					
 					View online at <a href="/students/davidyen" class="intranet">design.cmu.edu/students/davidyen</a><br>
 					<form>
