Removed images from top level Programs page.
Made CD page structure.

Minor CSS fixes.

Image stuff.

--- a/index.htm
+++ b/index.htm
@@ -180,7 +180,7 @@
 						
 						<!-- Features Bar -->
 						<div class="grid_3 omega">
-							<h3>Features</h3>
+							<h3 id="sidebar">Features</h3>
 							<section class="relativity_wrapper">
 								<ul class="relativity">
 									<li>
