--- a/intranet/faculty/class.htm
+++ b/intranet/faculty/class.htm
@@ -27,7 +27,7 @@
 						<nav id="global">
 							<ul>
 								<li>
-									<a href="projects.htm">
+									<a href="classes.htm">
 										<span>My classes</span>
 									</a>
 									<ul class="hover_nav">
@@ -93,19 +93,40 @@
 				<section id="myclass" class="grid_12">
 					<div class="grid_12 alpha breadcrumb">
 						<a href="classes.htm" class="intranet">My classes</a> / Pieces<hr>
-						<!--
-Editing "Inclusive design" project for Product Design III class.<br>
-						<a href="classes.htm" class="intranet">Back to my classes</a><br class="clear"><br>
--->
+						<h2 class="intranet">Pieces</h2>
+						<a href="#" class="intranet">View class online</a><br><br>
 					</div>
-					<div class="grid_7 alpha suffix_1">
-						<h2 class="intranet">Pieces</h2><br>
-						<h4 class="intranet">Class description</h4>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-						<br class="clear">
+					<div class="grid_2 alpha ">
+					<h4 class="intranet">Students</h4>
+						<ul id="students">
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Melissa Acosta</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Jennifer Baumgardner</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Anne Brodie</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Allen Yi-Lun Cai</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Tracy Ting Chou</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Charles Doomany</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Justin Edmund</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Matthew Finder</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Alyssa Fogel</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Colleen Grogan</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Nicholas Hagelin</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Sarah Harissis</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Stephanie Huang</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Rachel Inman</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Edward Jo</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Min Seon Kim</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Margaret Kohlhas</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Radhika Koyawala</li></a>
+							<a href="#"><li><img src="http://placehold.it/36x36/e2e2e2/e2e2e2"> Nancy Ke Lao</li></a>
+						</ul>
 					</div>
-					<div class="grid_4 omega" id="sidebar">
-						
+					<div class="grid_4">
+						<h4 class="intranet">Course description</h4>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br><br>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+					</div>
+					<div class="grid_6 omega">
+					<h4 class="intranet">Class Projects</h4>
+						<img src="http://placehold.it/220x140/e2e2e2/e2e2e2">
 					</div>
 				</section>
 				
