--- a/intranet/faculty/profile.htm
+++ b/intranet/faculty/profile.htm
@@ -27,7 +27,7 @@
 						<nav id="global">
 							<ul>
 								<li>
-									<a href="projects.htm">
+									<a href="classes.htm">
 										<span>My classes</span>
 									</a>
 									<ul class="hover_nav">
