more class page, etc

--- a/intranet/prints.htm
+++ b/intranet/prints.htm
@@ -6,7 +6,7 @@
 		<link href="../assets/css/960.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/style.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/intranet.css" rel="stylesheet" type="text/css">
-		<link href="../assets/css/tipsy.css" rel="stylesheet" type="text/css">
+		<link href="../assets/css/tipsy_intranet.css" rel="stylesheet" type="text/css">
 		
 		<script type="text/javascript" src="http://use.typekit.com/luo3wan.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -16,7 +16,7 @@
 		<script>
 			$(document).ready(function() {
 				$('a.printer').tipsy();
-			})
+			});
 		</script>
 		
 	</head>
