--- a/intranet/profile.htm
+++ b/intranet/profile.htm
@@ -84,6 +84,8 @@
 						<label for="links">&nbsp;</label>
 						<a href="#" id="add" class="intranet">Add another link</a>
 					</form>
+					<br class="clear">
+					<a href="#" class="button">Save changes</a>
 				</section>
 				
 				<div id="push"></div>
