--- a/intranet/project.htm
+++ b/intranet/project.htm
@@ -64,7 +64,7 @@
 			<div class="container_12">
 				<section id="project" class="grid_12">
 					<div class="grid_12 alpha breadcrumb">
-						<a href="classes.htm" class="intranet">Classes</a> / Product Design III / Inclusive Design project<hr>
+						<a href="classes.htm" class="intranet">Classes</a> / <a href="class.htm" class="intranet">Product Design III</a> / Inclusive Design project<hr>
 					</div>
 					<div class="grid_7 alpha suffix_1">
 						<form>
