--- a/intranet/projects.htm
+++ b/intranet/projects.htm
@@ -66,9 +66,8 @@
 					<h2 class="intranet">My projects</h2>
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
-							<h4 class="intranet">Product Design III</h4>
+							<a href="class.htm"><h4 class="intranet">Product Design III</h4></a>
 							Eric Anderson, Josh Welsh<br>
-							<a href="#" class="quiet">View online</a><br>
 							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design...</span>
 						</div>
 						<ul>
@@ -95,9 +94,8 @@
 					
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
-							<h4 class="intranet">Experimental Form</h4>
+							<a href="class.htm"><h4 class="intranet">Experimental Form</h4></a>
 							Mark Baskinger<br>
-							<a href="#" class="quiet">View online</a><br>
 							<span class="quiet">This course looks at the way objects elicit emotional responses and play key roles in enhancing our daily lives. The 5 individual themed projects for the semester, found, formed, fabricated, fiber, and functional...</span>
 						</div>
 						<ul>
@@ -139,9 +137,8 @@
 					
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
-							<h4 class="intranet">Digitech Design Tools</h4>
+							<a href="class.htm"><h4 class="intranet">Digitech Design Tools</h4></a>
 							Wayne Chung<br>
-							<a href="#" class="quiet">View online</a><br>
 							<span class="quiet">This course is the application and experimentation of digital technology inputs and outputs. The purpose will be to design, build, and experiment with forms that are unique...</span>
 						</div>
 						<ul>
