more changes, procrastinating on the project page for faculty =(

--- a/intranet/class.htm
+++ b/intranet/class.htm
@@ -27,9 +27,20 @@
 						<nav id="global">
 							<ul>
 								<li>
-									<a href="projects.htm">
-										<span>My projects</span>
+									<a href="classes.htm">
+										<span>My classes</span>
 									</a>
+									<ul class="hover_nav">
+										<li>
+											<a href="class.htm">Product Design III</a>
+										</li>
+										<li>
+											<a href="class.htm">Experimental Form</a>
+										</li>
+										<li>
+											<a href="class.htm">Digitech Design Tools</a>
+										</li>
+									</ul>
 								</li>
 								<li>
 									<a href="prints.htm">
@@ -99,7 +110,7 @@
 						</div>
 						
 						<div class="grid_3 omega">
-							<img src="http://placehold.it/220x140/e2e2e2/e2e2e2">
+							<img src="../assets/img/content/paris_radio.jpg">
 						</div>
 					</div>
 					<div class="grid_9 omega" id="projects">
