--- a/intranet/faculty/class.htm
+++ b/intranet/faculty/class.htm
@@ -58,23 +58,6 @@
 									<a href="prints.htm">
 										<span>My prints</span>
 									</a>
-									<ul class="hover_nav">
-										<li>
-											<a href="prints_cannon.htm">Canon Pro 9000</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">HP Color Laser</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">HP Design Jet</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">Epilog Cutter</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">ZCorps Printer</a>
-										</li>
-									</ul>
 								</li>
 								<li>
 									<a href="profile.htm">
@@ -104,7 +87,7 @@
 			<div class="container_12">
 				<section id="myclass" class="grid_12">
 					<div class="grid_12 alpha breadcrumb">
-						<a href="classes.htm" class="intranet">My classes</a> / Digital Photographic Imaging II<hr>
+						<a href="classes.htm" class="intranet">Classes</a> / Digital Photographic Imaging II<hr>
 						<h2 class="intranet">Digital Photographic Imaging II</h2>
 						<a href="#" class="intranet">View class online</a><br><br><br>
 					</div>
@@ -140,7 +123,7 @@
 						</div>
 						
 						<div class="grid_3 omega">
-							<img src="http://placehold.it/220x140/e2e2e2/e2e2e2"><br>
+							<img src="../../assets/img/content/alex_steamtunnel.jpg"><br>
 							<a href="#" class="intranet">Change thumbnail</a><br>
 							<span class="quiet">Displayed in the public Exhibition.</span>
 						</div>
@@ -151,19 +134,19 @@
 							<a href="project.htm" class="intranet">
 								<li class="grid_3 alpha">
 									<img src="http://placehold.it/220x140/efefef/efefef">
-									Seven Sins
+									Seven sins
 								</li>
 							</a>
 							<a href="project.htm" class="intranet">
 								<li class="grid_3">
 									<img src="http://placehold.it/220x140/efefef/efefef">
-									Song Interpretation
+									Song interpretation
 								</li>
 							</a>
 							<a href="project.htm" class="intranet">
 								<li class="grid_3 omega">
 									<img src="http://placehold.it/220x140/efefef/efefef">
-									Greek Myth
+									Greek myth
 								</li>
 							</a>
 						</ul>
