--- a/intranet/faculty/classes.htm
+++ b/intranet/faculty/classes.htm
@@ -46,23 +46,6 @@
 									<a href="prints.htm">
 										<span>My prints</span>
 									</a>
-									<ul class="hover_nav">
-										<li>
-											<a href="prints_cannon.htm">Canon Pro 9000</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">HP Color Laser</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">HP Design Jet</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">Epilog Cutter</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">ZCorps Printer</a>
-										</li>
-									</ul>
 								</li>
 								<li>
 									<a href="profile.htm">
@@ -94,27 +77,26 @@
 					<h2 class="intranet">My classes</h2>
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
-							<a href="class.htm"><h4>Pieces</h4></a>
-							<a href="#" class="quiet">View class online</a><br>
+							<a href="class.htm"><h4>Digital Photographic Imaging II</h4></a>
 							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design...</span>
 						</div>
 						<ul>
 							<a href="project.htm">
 								<li class="grid_3">
 									<img src="http://placehold.it/220x140/efefef/efefef">
-									Redesign charette
+									Seven sins
 								</li>
 							</a>
 							<a href="project.htm">
 								<li class="grid_3">
 									<img src="http://placehold.it/220x140/efefef/efefef">
-									Inclusive design
+									Song interpretation
 								</li>
 							</a>
 							<a href="project.htm">
 								<li class="grid_3 omega">
 									<img src="http://placehold.it/220x140/efefef/efefef">
-									Pittsburgh public spaces
+									Greek myth
 								</li>
 							</a>
 						</ul><br class="clear">
@@ -122,42 +104,14 @@
 					
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
-							<a href="class.htm"><h4>Digital Photographic Imaging II</h4></a>
-							<a href="#" class="quiet">View class online</a><br>
+							<a href="class.htm"><h4>Pieces</h4></a>
 							<span class="quiet">This course looks at the way objects elicit emotional responses and play key roles in enhancing our daily lives. The 5 individual themed projects for the semester, found, formed, fabricated, fiber, and functional...</span>
 						</div>
 						<ul>
 							<a href="project.htm">
 								<li class="grid_3">
 									<img src="http://placehold.it/220x140/efefef/efefef">
-									Perpetual motion
-								</li>
-							</a>
-							<a href="project.htm">
-								<li class="grid_3">
-									<img src="http://placehold.it/220x140/efefef/efefef">
-									Kinetic visualizers
-								</li>
-							</a>
-							<a href="project.htm">
-								<li class="grid_3 omega">
-									<img src="http://placehold.it/220x140/efefef/efefef">
-									3D printed chess pieces
-								</li>
-							</a><br class="clear"><br>
-								<li class="grid_3 omega">
-									&nbsp;
-								</li>
-							<a href="project.htm">
-								<li class="grid_3 ">
-									<img src="http://placehold.it/220x140/efefef/efefef">
-									Information graphic: 2D
-								</li>
-							</a>
-							<a href="project.htm">
-								<li class="grid_3 omega">
-									<img src="http://placehold.it/220x140/efefef/efefef">
-									Information graphic: 3D
+									Senior project: Pieces
 								</li>
 							</a>
 						</ul><br class="clear">
@@ -166,7 +120,6 @@
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
 							<a href="class.htm"><h4>Photographic Design</h4></a>
-							<a href="#" class="quiet">View class online</a><br>
 							<span class="quiet">This course is the application and experimentation of digital technology inputs and outputs. The purpose will be to design, build, and experiment with forms that are unique...</span>
 						</div>
 						<ul>
