--- a/intranet/prints.htm
+++ b/intranet/prints.htm
@@ -37,9 +37,20 @@
 						<nav id="global">
 							<ul>
 								<li>
-									<a href="projects.htm">
-										<span>My projects</span>
+									<a href="classes.htm">
+										<span>My classes</span>
 									</a>
+									<ul class="hover_nav">
+										<li>
+											<a href="class.htm">Product Design III</a>
+										</li>
+										<li>
+											<a href="class.htm">Experimental Form</a>
+										</li>
+										<li>
+											<a href="class.htm">Digitech Design Tools</a>
+										</li>
+									</ul>
 								</li>
 								<li>
 									<a href="prints.htm">
