--- a/intranet/classes.htm
+++ b/intranet/classes.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Pit Prototype</title>
+		<title>CMU Design Intranet</title>
 		<link href="../assets/css/reset.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/960.css" rel="stylesheet" type="text/css">
 		<link href="../assets/css/style.css" rel="stylesheet" type="text/css">
@@ -30,6 +30,17 @@
 									<a href="classes.htm">
 										<span>My classes</span>
 									</a>
+									<ul class="hover_nav">
+										<li>
+											<a href="class.htm">Product Design III</a>
+										</li>
+										<li>
+											<a href="class.htm">Experimental Form</a>
+										</li>
+										<li>
+											<a href="class.htm">Digitech Design Tools</a>
+										</li>
+									</ul>
 								</li>
 								<li>
 									<a href="prints.htm">
@@ -50,7 +61,7 @@
 											<a href="#">My Account</a>
 										</li>
 										<li>
-											<a href="#">Logout</a>
+											<a href="index2.htm">Logout</a>
 										</li>
 									</ul>
 								</li>
@@ -63,12 +74,11 @@
 			
 			<div class="container_12">
 				<section id="myclasses" class="grid_12">
-					<div id="title">My classes</div>
+					<h2 class="intranet">My classes</h2>
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
-							<h5 class="intranet">Product Design III</h5>
+							<a href="class.htm"><h4 class="intranet">Product Design III</h4></a>
 							Eric Anderson, Josh Welsh<br>
-							<a href="#" class="quiet">View online</a><br>
 							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design...</span>
 						</div>
 						<ul>
@@ -95,9 +105,8 @@
 					
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
-							<h5 class="intranet">Experimental Form</h5>
+							<a href="class.htm"><h4 class="intranet">Experimental Form</h4></a>
 							Mark Baskinger<br>
-							<a href="#" class="quiet">View online</a><br>
 							<span class="quiet">This course looks at the way objects elicit emotional responses and play key roles in enhancing our daily lives. The 5 individual themed projects for the semester, found, formed, fabricated, fiber, and functional...</span>
 						</div>
 						<ul>
@@ -139,9 +148,8 @@
 					
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
-							<h5 class="intranet">Digitech Design Tools</h5>
+							<a href="class.htm"><h4 class="intranet">Digitech Design Tools</h4></a>
 							Wayne Chung<br>
-							<a href="#" class="quiet">View online</a><br>
 							<span class="quiet">This course is the application and experimentation of digital technology inputs and outputs. The purpose will be to design, build, and experiment with forms that are unique...</span>
 						</div>
 						<ul>
