--- a/intranet/faculty/profile.htm
+++ b/intranet/faculty/profile.htm
@@ -46,23 +46,6 @@
 									<a href="prints.htm">
 										<span>My prints</span>
 									</a>
-									<ul class="hover_nav">
-										<li>
-											<a href="prints_cannon.htm">Canon Pro 9000</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">HP Color Laser</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">HP Design Jet</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">Epilog Cutter</a>
-										</li>
-										<li>
-											<a href="prints_cannon.htm">ZCorps Printer</a>
-										</li>
-									</ul>
 								</li>
 								<li>
 									<a href="profile.htm">
@@ -108,6 +91,8 @@
 						<label for="links">&nbsp;</label>
 						<a href="#" id="add" class="intranet">Add another link</a>
 					</form>
+					<br class="clear">
+					<a href="#" class="button">Save changes</a>
 				</section>
 				
 				<div id="push"></div>
