--- a/intranet/project.htm
+++ b/intranet/project.htm
@@ -27,9 +27,20 @@
 						<nav id="global">
 							<ul>
 								<li>
-									<a href="projects.htm">
-										<span>My projects</span>
+									<a href="classes.htm">
+										<span>My classes</span>
 									</a>
+									<ul class="hover_nav">
+										<li>
+											<a href="class.htm">Product Design III</a>
+										</li>
+										<li>
+											<a href="class.htm">Experimental Form</a>
+										</li>
+										<li>
+											<a href="class.htm">Digitech Design Tools</a>
+										</li>
+									</ul>
 								</li>
 								<li>
 									<a href="prints.htm">
@@ -66,18 +77,27 @@
 					<div class="grid_12 alpha breadcrumb">
 						<a href="classes.htm" class="intranet">Classes</a> / <a href="class.htm" class="intranet">Product Design III</a> / Inclusive Design project<hr>
 					</div>
-					<div class="grid_7 alpha suffix_1">
+					<div class="grid_4 alpha " id="sidebar">
+						<div>
+							<h3 class="intranet">Inclusive design</h3>
+							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design.</span>
+							<hr>
+							<img src="../assets/img/content/nobiradio.jpg">
+							<a href="#" class="intranet">Change thumbnail</a>
+						</div>
+					</div>
+					<div class="grid_7 omega">
 						<form>
 						<input type="text" value="Nobi Radio"></input>
 						<a href="#"><img src="../assets/img/wysiwig.jpg"></a>
 						<div id="textarea">
 						In a sponsored project with Carnegie Mellon Design, General Motors asked us to research and design future interaction scenarios with semi-autonomous vehicles. I worked with Renee Yang to do a brief research phase, develop preliminary ideas, and refine a final concept.<br><br>
 
-<h5>Changing the interaction paradigm</h5>
+<h5 class="intranet">Changing the interaction paradigm</h5>
 
 General Motors worked with CMU's junior industrial design class over the course of a few months on research and interaction design concepts. They were interested in the unique interaction scenarios that could result from the commercial availability of semi-autonomous vehicles.<br><br>
 <img src="../assets/img/content/nobiradio2.jpg"> <img src="../assets/img/content/nobiradio3.jpg"> <img src="../assets/img/content/nobiradio4.jpg"> <img src="../assets/img/content/nobiradio5.jpg"> <img src="../assets/img/content/nobiradio6.jpg"><br><br>
-<h5>Good design is inclusive design</h5>
+<h5 class="intranet">Good design is inclusive design</h5>
 
 We spent some time researching and creating models of the existing driving model, to both inform our concepts and give us a vocabulary for discussing them. We used a school survey, contextual inquiries, and make tools to diagram relevant parts of the experience of driving, which we used to direct our ideation phase. From our research we were able to draw conclusions about attention demands, social interactions inside of and between other cars, rituals and habitual behavior, and dangerous situations. We also took steps to familiarized ourselves with the state of autonomy, artificial intelligience, and display technology.
 						</div>
@@ -85,18 +105,7 @@ We spent some time researching and creating models of the existing driving model
 						</form>
 						<br class="clear">
 					</div>
-					<div class="grid_4 omega" id="sidebar">
-						<div>
-							<h4 class="intranet">"Inclusive design" project</h4>
-							<img src="../assets/img/content/nobiradio.jpg">
-							<a href="#" class="intranet">Change thumbnail</a>
-							<hr>
-							<h4 class="intranet">Product Design III</h4>
-							Eric Anderson, Josh Welsh<br>
-							<a href="#" class="quiet">View class online</a><br>
-							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design.</span>
-						</div>
-					</div>
+					
 				</section>
 				
 			</div>
