--- a/community/faculty.htm
+++ b/community/faculty.htm
@@ -702,7 +702,7 @@
 				
 				<div class="grid_3" id="intranet_login">
 					<h5>Intranet</h5>
-					<form action="intranet" method="post">
+					<form action="../intranet" method="post">
 						<input name="email" placeholder="Andrew ID" type="text">
 						<br>
 						<input name="password" placeholder="Password" type="password">
