More images. Faculty profile pages started but not finished. Relativity Bar on Apply page added but in need of refinement.

--- a/community/faculty.htm
+++ b/community/faculty.htm
@@ -177,7 +177,7 @@
 							</li>
 							
 							<li>
-								<a href="#">
+								<a href="../community/baskinger.htm">
 									<figure class="grid_3 none">
 										<div>
 											<div class="overlay"></div>
@@ -267,7 +267,7 @@
 							</li>
 							
 							<li>
-								<a href="#">
+								<a href="../community/hughes.htm">
 									<figure class="grid_3 none">
 										<div>
 											<div class="overlay"></div>
