--- a/community/seniors.htm
+++ b/community/seniors.htm
@@ -611,7 +611,7 @@
 								
 								<li class="grid_3 omega">
 									<figure>
-										<img src="http://placehold.it/60x60/EFEFEF/EFEFEF">
+										<img src="../assets/img/undergraduates/pieri.png">
 										<figcaption>
 											<span class="name">Dane Pieri</span>
 											<span class="site">
