--- a/programs/communication_design.htm
+++ b/programs/communication_design.htm
@@ -155,7 +155,7 @@
 							<ul class="relativity">
 								<li class="apply">
 									<p>The School of Design is accepting early admissions applications for the undergraduate program until September 1, 2011.</p>
-									<a href="../apply">
+									<a class="apply" href="../apply">
 										<span class="left">Apply today</span>
 										<span class="arrow">&rarr;</span>
 									</a>
