faculty project view

--- a/community/seniors.htm
+++ b/community/seniors.htm
@@ -711,7 +711,7 @@
 										<figcaption>
 											<span class="name">David Yen</span>
 											<span class="site">
-												<a href="http://aviden.com">www.aviden.com</a>
+												<a href="http://halfconscious.com">www.halfconscious.com</a>
 											</span>
 										</figcaption>
 									</figure>
