--- a/intranet/faculty/classes.htm
+++ b/intranet/faculty/classes.htm
@@ -144,7 +144,7 @@
 						</ul><br class="clear">
 					</div> <!-- end class row -->
 					<div class="class_row">
-					<a href="#" class="button">Add a class</a>
+					<a href="#" class="button">Create a class</a>
 					</div>
 				</section>
 				
