--- a/intranet/project_alternate.htm
+++ b/intranet/project_alternate.htm
@@ -76,16 +76,13 @@
 				<section id="project" class="grid_12">
 					<div class="grid_12 alpha breadcrumb">
 						<a href="classes.htm" class="intranet">Classes</a> / <a href="class.htm" class="intranet">Product Design III</a> / Inclusive Design project<hr>
-						<h2 class="intranet">Inclusive design</h2>
-						<a href="#" class="intranet">View project online</a><br><br>
 					</div>
-					<div class="grid_4 alpha">
+					<div class="grid_4 alpha " id="sidebar">
 						<div>
-							Project description<br>
-							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design. <br>
-							</span>
+							<h3 class="intranet">Inclusive design</h3>
+							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design.</span>
 							<hr>
-							<img src="../assets/img/content/nobiradio.jpg" width="300px;">
+							<img src="../assets/img/content/nobiradio.jpg">
 							<a href="#" class="intranet">Change thumbnail</a>
 						</div>
 					</div>
@@ -94,7 +91,7 @@
 						<input type="text" value="Nobi Radio"></input>
 						<a href="#"><img src="../assets/img/wysiwig.jpg"></a>
 						<div id="textarea">
-						In a sponsored project with Carnegie Mellon Design, General Motors asked us to research and design future interaction scenarios with semi-autonomous vehicles. I worked with Renee Yang to do a brief research phase, develop preliminary ideas, and refine a final concept.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu.<br><br>
+						In a sponsored project with Carnegie Mellon Design, General Motors asked us to research and design future interaction scenarios with semi-autonomous vehicles. I worked with Renee Yang to do a brief research phase, develop preliminary ideas, and refine a final concept.<br><br>
 
 <h5 class="intranet">Changing the interaction paradigm</h5>
 
