--- a/intranet/project_blank.htm
+++ b/intranet/project_blank.htm
@@ -82,27 +82,20 @@
 					<div class="grid_4 alpha">
 						<div>
 							Project description<br>
-							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design. <br>
-							</span>
+							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design.</span>
 							<hr>
-							<img src="../assets/img/content/nobiradio.jpg" width="300px;">
-							<a href="#" class="intranet">Change thumbnail</a>
+							<img src="http://placehold.it/300x160/efefef/efefef">
+							<a href="#" class="intranet">Upload thumbnail</a>
 						</div>
 					</div>
 					<div class="grid_7 omega">
 						<form>
-						<input type="text" value="Nobi Radio"></input>
+						<label for="project_title">Project title</label>
+						<input type="text" name="project_title"></input>
+						<label for="project_title">Project description</label>
 						<a href="#"><img src="../assets/img/wysiwig.jpg"></a>
 						<div id="textarea">
-						In a sponsored project with Carnegie Mellon Design, General Motors asked us to research and design future interaction scenarios with semi-autonomous vehicles. I worked with Renee Yang to do a brief research phase, develop preliminary ideas, and refine a final concept.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu.<br><br>
-
-<h5 class="intranet">Changing the interaction paradigm</h5>
-
-General Motors worked with CMU's junior industrial design class over the course of a few months on research and interaction design concepts. They were interested in the unique interaction scenarios that could result from the commercial availability of semi-autonomous vehicles.<br><br>
-<img src="../assets/img/content/nobiradio2.jpg"> <img src="../assets/img/content/nobiradio3.jpg"> <img src="../assets/img/content/nobiradio4.jpg"> <img src="../assets/img/content/nobiradio5.jpg"> <img src="../assets/img/content/nobiradio6.jpg"><br><br>
-<h5 class="intranet">Good design is inclusive design</h5>
-
-We spent some time researching and creating models of the existing driving model, to both inform our concepts and give us a vocabulary for discussing them. We used a school survey, contextual inquiries, and make tools to diagram relevant parts of the experience of driving, which we used to direct our ideation phase. From our research we were able to draw conclusions about attention demands, social interactions inside of and between other cars, rituals and habitual behavior, and dangerous situations. We also took steps to familiarized ourselves with the state of autonomy, artificial intelligience, and display technology.
+						
 						</div>
 						<a href="#" class="button">Save changes</a>
 						</form>
