--- a/intranet/classes.htm
+++ b/intranet/classes.htm
@@ -79,7 +79,7 @@
 						<div class="grid_3 alpha class_description">
 							<a href="class.htm"><h4 class="intranet">Product Design III</h4></a>
 							Eric Anderson, Josh Welsh<br>
-							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design...</span>
+							<span class="quiet">Junior design students practice the application of skills they've learned from sophomore year, to real users. Ad minim veniam, quis nostrud exercitation ullamco aute irure dolor in reprehenderit in voluptate velit...</span>
 						</div>
 						<ul>
 							<a href="project.htm">
