--- a/intranet/faculty/classes.htm
+++ b/intranet/faculty/classes.htm
@@ -78,7 +78,7 @@
 					<div class="class_row">
 						<div class="grid_3 alpha class_description">
 							<a href="class.htm"><h4>Digital Photographic Imaging II</h4></a>
-							<span class="quiet">Course projects are chosen to give students an opportunity to use their creative, technical and theoretical skills in a business application. The primary emphasis is on the use of a systematic process for the design...</span>
+							<span class="quiet">Senior design students self-direct personal design projects covering subjects ranging from creating cosmetics brands, to designing functioning webapps. Ad minim veniam, quis nostrud exercitation ullamco...</span>
 						</div>
 						<ul>
 							<a href="project.htm">
