experimental front page

--- a/intranet/class.htm
+++ b/intranet/class.htm
@@ -75,7 +75,7 @@
 			<div class="container_12">
 				<section id="myclass" class="grid_12">
 					<div class="grid_12 alpha breadcrumb">
-						<a href="classes.htm" class="intranet">Classes</a> / Product Design III<hr>
+						<a href="classes.htm">Classes</a> / Product Design III<hr>
 						<h2 class="intranet">Product Design III</h2>
 						<a href="#" class="intranet">View class online</a><br><br><br>
 					</div>
