--- a/intranet/classes.htm
+++ b/intranet/classes.htm
@@ -174,7 +174,7 @@
 						</ul><br class="clear">
 					</div> <!-- end class row -->
 					<div class="class_row">
-					<a href="#" class="button">Add a class</a>
+					<a href="#" class="button right">Add a class</a>
 					</div>
 				</section>
 				
