--- a/intranet/faculty/class.htm
+++ b/intranet/faculty/class.htm
@@ -87,7 +87,7 @@
 			<div class="container_12">
 				<section id="myclass" class="grid_12">
 					<div class="grid_12 alpha breadcrumb">
-						<a href="classes.htm" class="intranet">Classes</a> / Digital Photographic Imaging II<hr>
+						<a href="classes.htm">Classes</a> / Digital Photographic Imaging II<hr>
 						<h2 class="intranet">Digital Photographic Imaging II</h2>
 						<a href="#" class="intranet">View class online</a><br><br><br>
 					</div>
@@ -150,6 +150,8 @@
 								</li>
 							</a>
 						</ul>
+						<br class="clear">
+						<a href="#" class="button">Add a project</a>
 					</div>
 				</section>
 				
