--- a/intranet/faculty/project.htm
+++ b/intranet/faculty/project.htm
@@ -87,7 +87,7 @@
 			<div class="container_12">
 				<section id="project">
 					<div class="grid_12 breadcrumb">
-						<a href="classes.htm" class="intranet">Classes</a> / <a href="class.htm" class="intranet">Digital Photographic Imaging II</a> / Seven sins<hr>
+						<a href="classes.htm">Classes</a> / <a href="class.htm">Digital Photographic Imaging II</a> / Seven sins<hr>
 						<h2 class="intranet">Seven sins</h2>
 						<a href="#" class="intranet">View project online</a><br><br>
 					</div>
