--- a/intranet/project.htm
+++ b/intranet/project.htm
@@ -75,7 +75,7 @@
 			<div class="container_12">
 				<section id="project" class="grid_12">
 					<div class="grid_12 alpha breadcrumb">
-						<a href="classes.htm" class="intranet">Classes</a> / <a href="class.htm" class="intranet">Product Design III</a> / Inclusive Design project<hr>
+						<a href="classes.htm">Classes</a> / <a href="class.htm">Product Design III</a> / Inclusive Design project<hr>
 						<h2 class="intranet">Inclusive design</h2>
 						<a href="#" class="intranet">View project online</a><br><br>
 					</div>
@@ -106,7 +106,7 @@ We spent some time researching and creating models of the existing driving model
 						</div>
 						<a href="#" class="button">Save changes</a>
 						</form>
-						<br class="clear">
+						<br class="clear"><br>
 					</div>
 					
 				</section>
