another front page experiment, minor css

--- a/intranet/faculty/index.htm
+++ b/intranet/faculty/index.htm
@@ -121,7 +121,7 @@
 						<div class="date"><span class="day">15</span><span class="month">MAY</span></div>
 						<a href="#" class="intranet">Senior Graduation</a><br>
 						<span class="details">The School of Design class of 2011 graduation ceremony takes place in Breed Hall.
-						</span>
+						</span><br class="clear"><br><a href="#" class="button">Add an event</a>
 					</div><br class="clear"><br>
 				</section>
 				
