--- a/intranet/faculty/index2.htm
+++ b/intranet/faculty/index2.htm
@@ -4,10 +4,10 @@
 		<title>CMU Design Intranet</title>
 				<script type="text/javascript" src="http://use.typekit.com/luo3wan.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-		<link href="../assets/css/intranet_landing.css" rel="stylesheet" type="text/css">
+		<link href="../../assets/css/intranet_landing.css" rel="stylesheet" type="text/css">
 		
-		<script type="text/javascript" src="../assets/js/jquery-1.5.min.js"></script>
-		<script type="text/javascript" src="../assets/js/jquery.cycle.all.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/jquery-1.5.min.js"></script>
+		<script type="text/javascript" src="../../assets/js/jquery.cycle.all.min.js"></script>
 		<script>
 			$(document).ready(function() {
 				$('#cycler').cycle({
@@ -21,7 +21,7 @@
 	
 	<body>
 		<div id="login">
-			<div class="center"><img src="../assets/img/intranet_logo_large.png"></div>
+			<div class="center"><img src="../../assets/img/intranet_logo_large.png"></div>
 			
 			<form>
 				<input type="text" placeholder="Username"></input> 
