--- a/school/index.htm
+++ b/school/index.htm
@@ -237,10 +237,10 @@
 					<span>info@design.cmu.edu</span>
 					<span>(412) 268-2828</span>
 					<ul id="social">
-						<li><a href="http://facebook.com"><img src="assets/img/content/social_facebook.jpg"></a></li>
-						<li><a href="http://twitter.com"><img src="assets/img/content/social_twitter.jpg"></a></li>
-						<li><a href="http://linkedin.com"><img src="assets/img/content/social_linkedin.jpg"></a></li>
-						<li><a href="http://vimeo.com"><img src="assets/img/content/social_vimeo.jpg"></a></li>
+						<li><a href="http://facebook.com"><img src="../assets/img/content/social_facebook.jpg"></a></li>
+						<li><a href="http://twitter.com"><img src="../assets/img/content/social_twitter.jpg"></a></li>
+						<li><a href="http://linkedin.com"><img src="../assets/img/content/social_linkedin.jpg"></a></li>
+						<li><a href="http://vimeo.com"><img src="../assets/img/content/social_vimeo.jpg"></a></li>
 					</ul>
 				</div>
 				
