Playing with some changes on Experiment1

--- a/community/jedmund.htm
+++ b/community/jedmund.htm
@@ -185,12 +185,14 @@
 					
 				<div class="grid_6">
 					<span class="bio">
+						<img src="../assets/img/undergraduates/edmund.png">
 						<h2 class="inline">Justin Edmund</h2>
 						<span class="byline">BFA in Communication Design, Senior</span>
-						<a href="http://jedmund.com/">www.jedmund.com</a>
+						<a class="alpha grid_3" href="http://jedmund.com/">www.jedmund.com</a>
 					</span>
-											
-					<p class="content"></p>
+			
+					<p class="content">Justin Edmund is a designer and developer graduating from the the Carnegie-Mellon University School of Design in Pittsburgh, Pennsylvania. He specializes in product and interaction design, and is interested in social information and how it can be used to educate users about the passive and hidden details of their everyday life.</p>
+					<p class="content">He strives to use human-driven design and social media as a platform for cultural research, and one day hopes to change the world with design.</p>
 				</div>
 
 				<!-- Features Bar -->
