minor frontpageexp3 changes

--- a/index3.htm
+++ b/index3.htm
@@ -208,7 +208,8 @@
 												<span>Confluence Brings 40+ Companies</span>
 											</h4>
 										</a>
-										<p>In this project, students developed kinetic visualizers that recorded movement and art.</p>
+										<p>Among the leading companies are Frog Design, Apple, Google, Facebook, R/GA, and many more of the top brands in innovation. Recruiters
+										love the intersection of design and technology.</p>
 									</article>
 									<article class="alpha grid_4">
 										<a href="#">
@@ -262,7 +263,7 @@
 								
 								<div class="grid_4 omega">
 									<h3 class="experimental">Student projects</h3>
-									<article class="alpha grid_4">
+									<article class="alpha grid_4 experimental">
 										<a href="#">
 											<div>
 												<div class="overlay"></div>
@@ -270,9 +271,16 @@
 											</div>
 											<h4>Kinetic Visualizer</h4>
 										</a>
-										<p>John Ives explores art that makes itself.</p>
-									</article>	
-			
+									</article>
+									<article class="alpha grid_4">
+										<a href="#">
+											<div>
+												<div class="overlay"></div>
+												<img src="assets/img/news/04.png">
+											</div>
+											<h4>Phantom eReader app</h4>
+										</a>
+									</article>
 												
 								</div>
 							</div>
